# free-picolo

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  style.css
src/: data.rs  main.rs
templates/: play.html  select_pack.html  select_players.html  select_settings.html
