[package]
name = "free-picolo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
yew = { version="0.21", default-features = false, features = ["csr"] }
yew-template = "0.10"
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"]}
web-sys = { version="0.3", features=["Element", "Event", "HtmlInputElement"] }
wasm-bindgen = "0.2"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
